DTSPB-5089: updated dmns2